germinator drone added

--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -390,15 +390,6 @@ l_english:
 		mod_district_tec_biohive_assembly_max:0 "Max $district_tec_biohive_assembly_plural$"
 		district_tec_biohive_assembly_desc:0 "$district_tec_hive_world_assembly_desc$"
 
-			job_tec_hive_incubator:0 "Incubator Drone"
-			job_tec_hive_incubator_plural:0 "Incubator Drones"
-			job_tec_hive_incubator_desc:0 "These drones oversee and serve as caretakers of the new life of the collective."
-			job_tec_hive_incubator_effect_desc:0 "£job_tec_hive_incubator£ $job_tec_hive_incubator_plural$ generate §Y$tec_loc_energy$§!."
-			job_tec_hive_incubator_effect_nocheese_desc:0 "£job_tec_hive_incubator£ $job_tec_hive_incubator_plural$ generate §Y$tec_loc_energy$§!."
-			mod_job_tec_hive_incubator_add:0 "$job_tec_hive_incubator$ Jobs"
-			mod_job_tec_hive_incubator_per_pop:0 "§G+1§! $job_tec_hive_incubator$ Job per $VALUE$ Pops"
-			mod_job_tec_hive_incubator_per_pop_short:0 "\n§G+1§! £mod_job_tec_hive_incubator_add£ per $VALUE$ £pop£"
-
 		district_tec_biohive_industrial:0 "$district_tec_hive_world_industrial$"
 		district_tec_biohive_industrial_plural:0 "$district_tec_hive_world_industrial_plural$"
 		district_tec_biohive_industrial_desc:0 "$district_tec_hive_world_industrial_desc$"
@@ -431,6 +422,24 @@ l_english:
 		district_tec_hive_world_assembly_plural:0 "$district_tec_hive_world_assembly$s"
 		mod_district_tec_hive_world_assembly_max:0 "Max $district_tec_hive_world_assembly$s"
 		district_tec_hive_world_assembly_desc:0 "Sub-surface regions filled with litters of newborn and growing drones needing constant maintenance for a prosperous growth and development for the collective."
+
+			job_tec_hive_germinator:0 "Stem Ward"
+			job_tec_hive_germinator_plural:0 "Stem Watchmen"
+			job_tec_hive_germinator_desc:0 "These dedicated individuals oversee and serve as caretakers of the new life an sustenance of this society."
+			job_tec_hive_germinator_effect_desc:0 "£job_tec_hive_germinator£ $job_tec_hive_germinator_plural$ generate §Y$tec_loc_energy$§!."
+			job_tec_hive_germinator_effect_nocheese_desc:0 "£job_tec_hive_germinator£ $job_tec_hive_germinator_plural$ generate §Y$tec_loc_energy$§!."
+			mod_job_tec_hive_germinator_add:0 "$job_tec_hive_germinator$ Jobs"
+			mod_job_tec_hive_germinator_per_pop:0 "§G+1§! $job_tec_hive_germinator$ Job per $VALUE$ Pops"
+			mod_job_tec_hive_germinator_per_pop_short:0 "\n§G+1§! £mod_job_tec_hive_germinator_add£ per $VALUE$ £pop£"
+
+			job_tec_hive_germinator_drone:0 "Germinator Drone"
+			job_tec_hive_germinator_drone_plural:0 "Germinator Drones"
+			job_tec_hive_germinator_drone_desc:0 "These drones oversee and serve as caretakers of the new life an sustenance of the collective."
+			job_tec_hive_germinator_drone_effect_desc:0 "£job_tec_hive_germinator_drone£ $job_tec_hive_germinator_drone_plural$ generate §Y$tec_loc_energy$§!."
+			job_tec_hive_germinator_drone_effect_nocheese_desc:0 "£job_tec_hive_germinator_drone£ $job_tec_hive_germinator_drone_plural$ generate §Y$tec_loc_energy$§!."
+			mod_job_tec_hive_germinator_drone_add:0 "$job_tec_hive_germinator_drone$ Jobs"
+			mod_job_tec_hive_germinator_drone_per_pop:0 "§G+1§! $job_tec_hive_germinator_drone$ Job per $VALUE$ Pops"
+			mod_job_tec_hive_germinator_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_hive_germinator_drone_add£ per $VALUE$ £pop£"
 
 		district_tec_hive_world_industrial:0 "Industrial Pool"
 		district_tec_hive_world_industrial_plural:0 "$district_tec_hive_world_industrial_biohive$s"
