--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -758,7 +758,7 @@ l_english:
 	job_tec_depth_drone:0 "Depth Drone"
 	job_tec_depth_drone_plural:0 "Depth Drones"
 	job_tec_depth_drone_desc:0 "These drones inhabit dark and depth regions near the seabed, patrolling and ensuring the stability and prosperity of underwater colonies."
-	job_tec_depth_drone_effect_desc: "['concept_tec_specialist_job_tec_depth_drone'] consumes [tec_food_or_equivalent_upkeep] and generates a small amount of [job_tec_depth_drone_growth] and reduces £crime£ §YDeviancy§! "
+	job_tec_depth_drone_effect_desc: "['concept_tec_specialist_job_tec_depth_drone'] consume [tec_food_or_equivalent_upkeep] and generates a small amount of [job_tec_depth_drone_growth], increases $tec_loc_menial_output$ and reduces £crime£ §YDeviancy§! "
 	mod_job_tec_depth_drone_add:0 "$job_tec_depth_drone$ Jobs"
 	mod_job_tec_depth_drone_per_pop:0 "§G+1§! $job_tec_depth_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_depth_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_depth_drone_add£ per $VALUE$ £pop£"
@@ -798,7 +798,7 @@ l_english:
 
 	district_tec_proto_mining:0 "Carbonate Processor"
 	district_tec_proto_mining_plural:0 "Carbonate Processors"
-	district_tec_proto_mining_desc:0 "Automated strip mines where automated machinery extract useful minerals and use the raw non usable material as combustible, mixed with synthetized or extracted water, for creating dense gases, filtering pollutants while producing a kind of greenhouse effect, enriching the athmosphere via carbonation."
+	district_tec_proto_mining_desc:0 "Automated strip mines where automated machinery extract useful minerals and use the raw non usable material as combustible, mixed with synthesized or extracted water, for creating dense gases, filtering pollutants while producing a kind of greenhouse effect, enriching the atmosphere via carbonation."
 	mod_district_tec_proto_mining_max:0 "Max £district£ $district_tec_proto_mining$"
 
 	district_tec_proto_farming:0 "Biosphere Domes"
