--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -112,6 +112,9 @@
 	tec_loc_jobs: "£job£ Jobs"
 	tec_loc_job: "£job£ Job"
 
+	tec_loc_menial_output: "£job£ Menial Job Output"
+	tec_loc_specialist_output: "£job£ Specialist Job Output"
+
 	tec_loc_designation: "£stability£ Designation"
 	tec_loc_planet_designation: "£stability£ Planet Designation"
 
