disabled cloning for bhives + biomatter drnes

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -372,11 +372,11 @@ l_english:
 	 # /
 	 # --------------- Menial Food 
 		building_tec_biohive_hydroponics_farm_1:0 "Biomatter Farm"
-		building_tec_biohive_hydroponics_farm_1_desc:0 "Biological matter is generated here from rich minerals and valuable energy, creating specific growths that serve as the raw matter for the rest of the biological entities and drones that conform the swarm."
+		building_tec_biohive_hydroponics_farm_1_desc:0 "Any natural resource will be reprocessed into rich biological matter that will be used for the good of the collectiveB."
 		building_tec_biohive_hydroponics_farm_2:0 "Biomatter Nest"
-		building_tec_biohive_hydroponics_farm_2_desc:0 "Biological matter is generated here from rich minerals and valuable energy, creating specific growths that serve as the raw matter for the rest of the biological entities and drones that conform the swarm."
+		building_tec_biohive_hydroponics_farm_2_desc:0 "Any natural resource will be reprocessed into rich biological matter that will be used for the good of the collectiveB."
 		building_tec_biohive_hydroponics_farm_3:0 "Biomatter Lair"
-		building_tec_biohive_hydroponics_farm_3_desc:0 "Biological matter is generated here from rich minerals and valuable energy, creating specific growths that serve as the raw matter for the rest of the biological entities and drones that conform the swarm."
+		building_tec_biohive_hydroponics_farm_3_desc:0 "Any natural resource will be reprocessed into rich biological matter that will be used for the good of the collectiveB."
 
 		building_tec_biohive_food_processing_facility:0 "Biogerminator"
 		building_tec_biohive_food_processing_facility_desc:0 "Special megaorganisms dedicated to accelerate the growth of biological matter to be harvested as usable biomatter at a small but effective scale."
@@ -384,6 +384,30 @@ l_english:
 		building_tec_biohive_food_processing_center_desc:0 "Special megaorganisms dedicated to accelerate the growth of biological matter to be harvested as usable biomatter at a regional scale."
 		building_tec_biohive_food_processing_complex:0 "Planetary Germinator"
 		building_tec_biohive_food_processing_complex_desc:0 "Special megaorganisms dedicated to accelerate the growth of biological matter to be harvested as usable biomatter at a whole planetary scale."
+	 # /
+	 # Biomass
+		building_tec_biohive_biomass_farm_1:0 "Biomass Cultivator"
+		building_tec_biohive_biomass_farm_1_desc:0 "Biological matter is generated here from rich minerals and valuable energy, creating specific growths that serve as the raw matter for the rest of the biological entities and drones that conform the swarm."
+		building_tec_biohive_biomass_farm_2:0 "Biomass Converter"
+		building_tec_biohive_biomass_farm_2_desc:0 "Biological matter is generated here from rich minerals and valuable energy, creating specific growths that serve as the raw matter for the rest of the biological entities and drones that conform the swarm."
+		building_tec_biohive_biomass_farm_3:0 "Biomass Amalgamator"
+		building_tec_biohive_biomass_farm_3_desc:0 "Biological matter is generated here from rich minerals and valuable energy, creating specific growths that serve as the raw matter for the rest of the biological entities and drones that conform the swarm."
+
+		job_tec_biomass_agri_drone:0 "Podtender Drone"
+		job_tec_biomass_agri_drone_plural:0 "Podtender Drones"
+		job_tec_biomass_agri_drone_desc:0 "These drones devote themselves to ensure the correct growth and caring the newest or youngest members of the collective."
+		job_tec_biomass_agri_drone_effect_desc:0 "£job_tec_biomass_agri_drone£ $job_tec_biomass_agri_drone_plural$ assemble new drone £pop£ §YPops§! with §Y$tec_loc_food$§! or §Y$tec_loc_minerals$§!."
+		mod_job_tec_biomass_agri_drone_add:0 "$job_tec_biomass_agri_drone$ Jobs"
+		mod_job_tec_biomass_agri_drone_per_pop:0 "§G+1§! $job_tec_biomass_agri_drone$ Job per $VALUE$ Pops"
+		mod_job_tec_biomass_agri_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_biomass_agri_drone_add£ per $VALUE$ £pop£"
+
+		job_tec_biomass_mining_drone:0 "Podtender Drone"
+		job_tec_biomass_mining_drone_plural:0 "Podtender Drones"
+		job_tec_biomass_mining_drone_desc:0 "These drones devote themselves to ensure the correct growth and caring the newest or youngest members of the collective."
+		job_tec_biomass_mining_drone_effect_desc:0 "£job_tec_biomass_mining_drone£ $job_tec_biomass_mining_drone_plural$ assemble new drone £pop£ §YPops§! with §Y$tec_loc_food$§! or §Y$tec_loc_minerals$§!."
+		mod_job_tec_biomass_mining_drone_add:0 "$job_tec_biomass_mining_drone$ Jobs"
+		mod_job_tec_biomass_mining_drone_per_pop:0 "§G+1§! $job_tec_biomass_mining_drone$ Job per $VALUE$ Pops"
+		mod_job_tec_biomass_mining_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_biomass_mining_drone_add£ per $VALUE$ £pop£"
 	 # /
 	# /
 	# --------------- Research
@@ -579,14 +603,6 @@ l_english:
 		mod_job_tec_biospawning_drone_per_pop:0 "§G+1§! $job_tec_biospawning_drone$ Job per $VALUE$ Pops"
 		mod_job_tec_biospawning_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_biospawning_drone_add£ per $VALUE$ £pop£"
 		# Biomass buildings
-
-		job_tec_biomass_drone:0 "Podtender Drone"
-		job_tec_biomass_drone_plural:0 "Podtender Drones"
-		job_tec_biomass_drone_desc:0 "These drones devote themselves to ensure the correct growth and caring the newest or youngest members of the collective."
-		job_tec_biomass_drone_effect_desc:0 "£job_tec_biomass_drone£ $job_tec_biomass_drone_plural$ assemble new drone £pop£ §YPops§! with §Y$tec_loc_food$§! or §Y$tec_loc_minerals$§!."
-		mod_job_tec_biomass_drone_add:0 "$job_tec_biomass_drone$ Jobs"
-		mod_job_tec_biomass_drone_per_pop:0 "§G+1§! $job_tec_biomass_drone$ Job per $VALUE$ Pops"
-		mod_job_tec_biomass_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_biomass_drone_add£ per $VALUE$ £pop£"
 
 		# branch office
 		D_building_tec_biohivecorp_growth:0 "Evergrowing Germinator"
