Bunch of biohive fixes + ai adjustments

--- a/localisation/english/zz_evolved_modifiers_l_english.yml
+++ b/localisation/english/zz_evolved_modifiers_l_english.yml
@@ -158,6 +158,11 @@
  modifier_tec_digicomposed_8000_pops:0 "Digitalized Individuals"
  modifier_tec_digicomposed_8000_pops_desc:0 "§EA§!."
 
+ modifier_tec_hidden_biohive_modifier:0 "$auth_tec_hive_biological$"
+ modifier_tec_hidden_biohive_modifier_desc:0 "§EFood...§!."
+
+ modifier_tec_hidden_lithohive_modifier:0 "$auth_tec_hive_biological$"
+ modifier_tec_hidden_lithohive_modifier_desc:0 "§EMinerals...§!."
 
  modifier_tec_hidden_organicarch_modifier:0 "Organic Architecture"
  modifier_tec_hidden_organicarch_modifier_desc:0 "§EFood...§!."
