Add research capital designation

--- a/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
+++ b/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
@@ -18,6 +18,9 @@
 # ------------------------------------------------------------
 # Colony Types
 # ------------------------------------------------------------
+ # Capitals
+ col_capital_research:0 "Research Capital"
+ col_capital_research_desc:0 "This capital is a seat of scientific research and technological advancement."
  # ------------------------------------------------- Habitats
 
  # /
