feat: ai improvements and performance

--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -706,7 +706,7 @@ l_english:
 	district_tec_eco_aqua_generator_plural:0 "Eco-Dynamo Districts"
 	district_tec_eco_aqua_generator_desc:0 "$district_tec_aqua_generator_desc$"
 
-	district_tec_eco_aqua_mining:0 "Ptro-Reef Eco-District"
+	district_tec_eco_aqua_mining:0 "Eco-Reef District"
 	district_tec_eco_aqua_mining_plural:0 "Eco-Reef Districts"
 	district_tec_eco_aqua_mining_desc:0 "$district_tec_aqua_mining_desc$"
 
