--- a/localisation/english/zz_evolved_l_english.yml
+++ b/localisation/english/zz_evolved_l_english.yml
@@ -18,3 +18,6 @@ requires_ascension_perks_4:0 "$TRIGGER_FAIL$Requires 4 other Ascension Perks to 
 # COUNTRY_MODIFIER:0 "$EMPIRE_EFFECTS_W_ICON$"
 # COUNTRY_MODIFIERS:0 "$EMPIRE_EFFECTS_W_ICON$"
 # EFFECTS: "[scope_icon_and_name]"
+
+ planet_automation_ai:0 " £time£ AI Automation"
+ planet_automation_ai_desc: "Please ignore this, won't do anything for player"
