--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -312,10 +312,10 @@ l_english:
 	# /
 	# --------------- Anticrime
 		building_tec_biohive_anticrime_1:0 "Neutrophil Nodule"
-		building_tec_biohive_anticrime_1_desc:0 "TO DO."
+		building_tec_biohive_anticrime_1_desc:0 "From these biological structures, thousands of protective drones control and ensure no deviancy occurs in the collective."
 
 		building_tec_biohive_anticrime_2:0 "Neutrophil Spire"
-		building_tec_biohive_anticrime_2_desc:0 "TO DO."
+		building_tec_biohive_anticrime_2_desc:0 "From these biological structures, thousands of protective drones control and ensure no deviancy occurs in the collective."
 	# /
 	# --------------- Housing
 		building_tec_biohive_housing_1:0 "Bio Warren"
@@ -330,27 +330,27 @@ l_english:
 	# /
 	# --------------- Utility
 		building_tec_biohive_resource_silo_1:0 "Accumulated Reserves"
-		building_tec_biohive_resource_silo_1_desc:0 "REPLACE_ME"
-		building_tec_biohive_resource_silo_2:0 "Protected Reserves"
-		building_tec_biohive_resource_silo_2_desc:0 "REPLACE_ME"
-		building_tec_biohive_resource_silo_3:0 "Metabolized"
-		building_tec_biohive_resource_silo_3_desc:0 "REPLACE_ME"
+		building_tec_biohive_resource_silo_1_desc:0 "Layers and layers of hardened biomaterial protect the valuable resources of the collective."
+		building_tec_biohive_resource_silo_2:0 "integrated Reserves"
+		building_tec_biohive_resource_silo_2_desc:0 "Layers and layers of hardened biomaterial protect the valuable resources of the collective."
+		building_tec_biohive_resource_silo_3:0 "Metabolized Reservers"
+		building_tec_biohive_resource_silo_3_desc:0 "Layers and layers of hardened biomaterial protect the valuable resources of the collective, amassed in big quantities and processed for later use."
 	# /
 	# --------------- Menial
 	 # --------------- Menial Energy
 		building_tec_biohive_energrid_1:0 "Bio-Generator"
-		building_tec_biohive_energrid_1_desc:0 "REPLACE_ME"
+		building_tec_biohive_energrid_1_desc:0 "This biocreated structure produces highly efficient energy processes, with bioconductors transmitting it to close-by structures and processes."
 		building_tec_biohive_energrid_2:0 "Grown Bio-Generator"
-		building_tec_biohive_energrid_2_desc:0 "REPLACE_ME"
+		building_tec_biohive_energrid_2_desc:0 "This biocreated structure produces highly efficient energy processes, with bioconductors transmitting it to close-by structures and processes."
 		building_tec_biohive_energrid_3:0 "Mature Bio-Generator"
-		building_tec_biohive_energrid_3_desc:0 "REPLACE_ME"
+		building_tec_biohive_energrid_3_desc:0 "This biocreated structure produces highly efficient energy processes, with bioconductors transmitting it to close-by structures and processes."
 
 		building_tec_biohive_energy_grid:0 "Energy Nodule"
-		building_tec_biohive_energy_grid_desc:0 "REPLACE_ME"
+		building_tec_biohive_energy_grid_desc:0 "Transmitting and coordinating the creation of energy, these autonomous organic structures crackle with ecstatic while the power produced and exchanged courses through its spinal conductors."
 		building_tec_biohive_energy_nexus:0 "Improved Energy Nodule"
-		building_tec_biohive_energy_nexus_desc:0 "REPLACE_ME"
+		building_tec_biohive_energy_nexus_desc:0 "Transmitting and coordinating the creation of energy, these autonomous organic structures crackle with ecstatic while the power produced and exchanged courses through its spinal conductors."
 		building_tec_biohive_energy_complex:0 "Sentient Energy Nodule"
-		building_tec_biohive_energy_complex_desc:0 "REPLACE_ME"
+		building_tec_biohive_energy_complex_desc:0 "Transmitting and coordinating the creation of energy, these autonomous organic structures crackle with ecstatic while the power produced and exchanged courses through its spinal conductors."
 	 # /
 	 # --------------- Menial Minerals
 		building_tec_biohive_stripmine_1:0 "Mining Tendrils"
@@ -411,34 +411,34 @@ l_english:
 	 # /
 	# /
 	# --------------- Research
-		building_tec_biohive_research_lab_1:0 "Neuromorph"
-		building_tec_biohive_research_lab_1_desc:0 "A."
+		building_tec_biohive_research_lab_1:0 "Research Neuromorph"
+		building_tec_biohive_research_lab_1_desc:0 "Giant neurological processors host millions of calculations and thoughts through a complex network of secondary brains, transmitted from and to the drones and collective itself."
 		building_tec_biohive_research_lab_2:0 "Elevated Neuromorph"
-		building_tec_biohive_research_lab_2_desc:0 "A."
+		building_tec_biohive_research_lab_2_desc:0 "Giant neurological processors host millions of calculations and thoughts through a complex network of secondary brains, transmitted from and to the drones and collective itself."
 		building_tec_biohive_research_lab_3:0 "Sentient Neuromorph"
-		building_tec_biohive_research_lab_3_desc:0 "A."
+		building_tec_biohive_research_lab_3_desc:0 "Giant neurological processors host millions of calculations and thoughts through a complex network of secondary brains, transmitted from and to the drones and collective itself."
 
 		building_tec_biohive_research_booster_1:0 "Planetary Bio-Brain"
-		building_tec_biohive_research_booster_1_desc:0 "A."
+		building_tec_biohive_research_booster_1_desc:0 "This giant neural mass conforms a direct extension of the intellect of the collective, coordinating the acquisition and transmission of information, data and innovations."
 
 		building_tec_biohive_science_2:0 "Sentient Bio-Brain"
-		building_tec_biohive_science_2_desc:0 "A."
+		building_tec_biohive_science_2_desc:0 "This giant neural mass conforms a direct extension of the intellect of the collective, coordinating the acquisition and transmission of information, data and innovations."
 	# /
 	# --------------- Unity
 		# Unity normal building
 		building_tec_biohive_node:0 "Dendrite Node"
-		building_tec_biohive_node_desc:0 "TO_DO_WIP"
+		building_tec_biohive_node_desc:0 "These biological structures resonate with the sub-spatial signal of the collective, creating cohesion and unity amongst all the members of it."
 		building_tec_biohive_cluster:0 "Dendrite Cluster"
-		building_tec_biohive_cluster_desc:0 "TO_DO_WIP"
+		building_tec_biohive_cluster_desc:0 "These biological structures resonate with the sub-spatial signal of the collective, creating cohesion and unity amongst all the members of it."
 		building_tec_biohive_confluence:0 "Dendrite Amplifier"
-		building_tec_biohive_confluence_desc:0 "TO_DO_WIP"
+		building_tec_biohive_confluence_desc:0 "These biological structures resonate with the sub-spatial signal of the collective, creating cohesion and unity amongst all the members of it."
 		# Unity booster
 		building_tec_biohive_relay_1:0 "Sensorial Neuro-Communicator"
-		building_tec_biohive_relay_1_desc:0 "TO_DO_WIP"
+		building_tec_biohive_relay_1_desc:0 "Vibrating and emitting neural pulses at incredible speeds, these biocontructions improve the connection and thought processing on the planet, thus making drones incredibly efficient."
 		building_tec_biohive_relay_2:0 "Sensorial Neuro-Transmitter"
-		building_tec_biohive_relay_2_desc:0 "TO_DO_WIP"
+		building_tec_biohive_relay_2_desc:0 "Vibrating and emitting neural pulses at incredible speeds, these biocontructions improve the connection and thought processing on the planet, thus making drones incredibly efficient."
 		building_tec_biohive_relay_3:0 "Sensorial Neuro-Converger"
-		building_tec_biohive_relay_3_desc:0 "TO_DO_WIP"
+		building_tec_biohive_relay_3_desc:0 "Vibrating and emitting neural pulses at incredible speeds, these biocontructions improve the connection and thought processing on the planet, thus making drones incredibly efficient."
 
 			job_tec_sensorial_drone:0 "Evolutionary Drone"
 			job_tec_sensorial_drone_plural:0 "Evolutionary Drones"
@@ -450,7 +450,7 @@ l_english:
 			mod_job_tec_sensorial_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_sensorial_drone_add£ per $VALUE$ £pop£"
 
 		building_tec_biohive_amplifier:0 "Evolution Chamber"
-		building_tec_biohive_amplifier_desc:0 "A."
+		building_tec_biohive_amplifier_desc:0 "Infinite strands of genetic material are allocated and altered here, preparing the creation and application of such for new types and breeds of drones."
 
 			job_tec_bioevolution_drone:0 "Evolutionary Drone"
 			job_tec_bioevolution_drone_plural:0 "Evolutionary Drones"
@@ -470,52 +470,52 @@ l_english:
 		building_tec_biohive_foundry_3_desc:0 "Specific biomorph dedicated to improve the quality and hardness of bioalloys produced via biomatter metamorphosis and calcification in unfathomable quantities."
 
 		building_tec_biohive_factory_1:0 "Industrial Organs"
-		building_tec_biohive_factory_1_desc:0 ""
+		building_tec_biohive_factory_1_desc:0 "Adapted to create a pattern, this biological industry reproduces high-quality elements from basic materials"
 		building_tec_biohive_factory_2:0 "Fabricator Organs"
-		building_tec_biohive_factory_2_desc:0 ""
+		building_tec_biohive_factory_2_desc:0 "Adapted to create a pattern, this biological industry reproduces high-quality elements from basic materials"
 		building_tec_biohive_factory_3:0 "Replicator Organs"
-		building_tec_biohive_factory_3_desc:0 ""
+		building_tec_biohive_factory_3_desc:0 "Adapted to create a pattern, this biological industry reproduces high-quality elements from basic materials"
 
 		building_tec_biohive_industrial_booster:0 "Industrial Neuro-Gland"
-		building_tec_biohive_industrial_booster_desc:0 ""
+		building_tec_biohive_industrial_booster_desc:0 "An amalgam of macro-neural transmitters specifically tailored and created to improve the production of industrial materials."
 
 		building_tec_biohive_strategic_booster:0 "Strategic Cerebellum"
-		building_tec_biohive_strategic_booster_desc:0 ""
+		building_tec_biohive_strategic_booster_desc:0 "An amalgam of macro-neural transmitters specifically tailored and created to improve the production of strategic resources."
 	# /
 	# --------------- Rare resources
-		building_tec_biohive_chemical_plant_1:0 "Chemical Cyst"
-		building_tec_biohive_chemical_plant_1_desc:0 ""
+		building_tec_biohive_chemical_plant_1:0 "Chemical Colony"
+		building_tec_biohive_chemical_plant_1_desc:0 "A created biological structure dedicated solely to the creation and processing of valuable motes, based on patterns implanted by the collective."
 		building_tec_biohive_chemical_plant_2:0 "Chemical Outgrow"
-		building_tec_biohive_chemical_plant_2_desc:0 ""
+		building_tec_biohive_chemical_plant_2_desc:0 "A created biological structure dedicated solely to the creation and processing of valuable motes, based on patterns implanted by the collective."
 		building_tec_biohive_chemical_plant_3:0 "Chemical Amalgam"
-		building_tec_biohive_chemical_plant_3_desc:0 ""
+		building_tec_biohive_chemical_plant_3_desc:0 "A created biological structure dedicated solely to the creation and processing of valuable motes, based on patterns implanted by the collective."
 
 		building_tec_biohive_refinery_1:0 "Gaseous Breather"
-		building_tec_biohive_refinery_1_desc:0 ""
+		building_tec_biohive_refinery_1_desc:0 "These biomaterial capsules process materials into valuable gases used for several applications and population enhancement."
 		building_tec_biohive_refinery_2:0 "Gaseous Expeller"
-		building_tec_biohive_refinery_2_desc:0 ""
+		building_tec_biohive_refinery_2_desc:0 "These biomaterial capsules process materials into valuable gases used for several applications and population enhancement."
 		building_tec_biohive_refinery_3:0 "Gaseous Polluter"
-		building_tec_biohive_refinery_3_desc:0 ""
+		building_tec_biohive_refinery_3_desc:0 "These biomaterial capsules process materials into valuable gases used for several applications and population enhancement."
 
 		building_tec_biohive_crystal_plant_1:0 "Crystal Cyst"
-		building_tec_biohive_crystal_plant_1_desc:0 ""
+		building_tec_biohive_crystal_plant_1_desc:0 "Rich crystals are artificially created and grow on this biological structure for later harvesting and refining"
 		building_tec_biohive_crystal_plant_2:0 "Crystal Vesicle"
-		building_tec_biohive_crystal_plant_2_desc:0 ""
+		building_tec_biohive_crystal_plant_2_desc:0 "Rich crystals are artificially created and grow on this biological structure for later harvesting and refining"
 		building_tec_biohive_crystal_plant_3:0 "Crystal Bladder"
-		building_tec_biohive_crystal_plant_3_desc:0 ""
+		building_tec_biohive_crystal_plant_3_desc:0 "Rich crystals are artificially created and grow on this biological structure for later harvesting and refining"
 	# /
 	# --------------- Rare deposits
 		building_tec_biohive_mote_harvesters:0 "Mote Collector"
-		building_tec_biohive_mote_harvesters_desc:0 ""
+		building_tec_biohive_mote_harvesters_desc:0 "This mega-organism has been implanted near a source of rich volatile motes, draining and filtering material of the area to both harvest it and improve its production."
 
-		building_tec_biohive_gas_extractors:0 "Gas Vents"
-		building_tec_biohive_gas_extractors_desc:0 ""
+		building_tec_biohive_gas_extractors:0 "Gas Ventrals"
+		building_tec_biohive_gas_extractors_desc:0 "Big conducts absorb the valuable gases of the area, processing it into solid or liquid material later transported by nearby drones."
 
 		building_tec_biohive_crystal_mines:0 "Crystal Excavators"
-		building_tec_biohive_crystal_mines_desc:0 ""
+		building_tec_biohive_crystal_mines_desc:0 "This biostructure sweeps nearby sources of crystals to analyze and replicate via biological processes the qualities of such, and also collect the valuable and viable ones found."
 
 		building_tec_biohive_betharian_power_plant:0 "Betharian Nodule"
-		building_tec_biohive_betharian_power_plant_desc:0 ""
+		building_tec_biohive_betharian_power_plant_desc:0 "And adapted biogenerator nodule now located near a source of Betharian, greatly amplifying the qualities of the processed energy and improving the production in a massive scale by collection of the hyper-conductive material."
 	# /
 	# --------------- Military/Naval
 		building_tec_biohive_stronghold:0 "Drone Stronghold"
@@ -526,14 +526,14 @@ l_english:
 		building_tec_biohive_bastion_desc:0 "Calcified layers of biomatter conforms diverse respectable points of defense in this planet, reinforcing the planetary integrity and safety and emitting disarray signals to disarray enemy fleets."
 		
 		building_tec_naval_biohive_1:0 "Naval Transmitter"
-		building_tec_naval_biohive_1_desc:0 "Coordinated with the rest of neural web of this planet, this organism emits and receives a pseudo-psionic signal to increase the control over larger naval bioforms, using the smaller swarm bioforms as resonators."
+		building_tec_naval_biohive_1_desc:0 "Coordinated with the rest of neural web of this planet, this organism emits and receives a pseudo-psychic signal to increase the control over larger naval bioforms, using the smaller swarm bioforms as resonators."
 		building_tec_naval_biohive_2:0 "Naval Transducer"
-		building_tec_naval_biohive_2_desc:0 "Coordinated with the rest of neural web of this planet, this organism emits and receives a pseudo-psionic signal to increase the control over larger naval bioforms, using the smaller swarm bioforms as resonators, over entire systems."
+		building_tec_naval_biohive_2_desc:0 "Coordinated with the rest of neural web of this planet, this organism emits and receives a pseudo-psychic signal to increase the control over larger naval bioforms, using the smaller swarm bioforms as resonators, over entire systems."
 		building_tec_naval_biohive_3:0 "Naval Relay"
-		building_tec_naval_biohive_3_desc:0 "Coordinated with the rest of neural web of this planet, this organism emits and receives a pseudo-psionic signal to increase the control over larger naval bioforms, using the smaller swarm bioforms as resonators."
+		building_tec_naval_biohive_3_desc:0 "Coordinated with the rest of neural web of this planet, this organism emits and receives a pseudo-psychic signal to increase the control over larger naval bioforms, using the smaller swarm bioforms as resonators."
 
-		building_tec_biohive_military:0 "Lymphatic Accelerator"
-		building_tec_biohive_military_desc:0 "A"
+		building_tec_biohive_military:0 "Aggro-Lymphatic Accelerator"
+		building_tec_biohive_military_desc:0 "Allocated to this structure, new breeds of biomorph warrior drones receive new conditioning to improve their performance on battle."
 
 	# /
 	# --------------- Jobs
@@ -1768,7 +1768,7 @@ l_english:
 
 	job_tec_broodlord_drone:0 "Brood Lord"
 	job_tec_broodlord_drone_plural:0 "Brood Lords"
-	job_tec_broodlord_drone_desc:0 "Specially breed and unique autonomous drones whose main function is securing and fertilizing broodqueens, having a increasingly high psionic power under other categories of drones, and serving as literally mobile fortresses as they are extremely tough, powerful and cunning."
+	job_tec_broodlord_drone_desc:0 "Specially breed and unique autonomous drones whose main function is securing and fertilizing broodqueens, having a increasingly high psyquic power under other categories of drones, and serving as literally mobile fortresses as they are extremely tough, powerful and cunning."
 	job_tec_broodlord_drone_effect_desc:0 "£job_tec_broodlord_drone£ $job_tec_broodlord_drone_plural$ increases §Y$tec_loc_stability$§! and spawn £defense_army£ §YDefense Armies§!."
 	#\n\n Each £job_tec_broodlord_drone£ $job_tec_broodlord_drone$ makes £job_tec_broodqueen_drone£ $job_tec_broodqueen_drone_plural$ increase its £pop£ §GOrganic pop assembly§! speed."
 	job_tec_broodlord_drone_effect_desc_growth:0 "£job_tec_broodlord_drone£ $job_tec_broodlord_drone_plural$ increases §Y$tec_loc_stability$§! and spawn £defense_army£ §YDefense Armies§!."
