--- a/localisation/english/replace/zzzz_uml_modifier_l_english.yml
+++ b/localisation/english/replace/zzzz_uml_modifier_l_english.yml
@@ -10321,6 +10321,133 @@
  mod_planet_jobs_complex_and_simple_drone_all_industrial_upkeep_add: "$mod_planet_jobs_complex_and_simple_drone_all_industrial_upkeep_mult$"
  mod_planet_jobs_complex_and_simple_drone_all_basic_upkeep_add: "$mod_planet_jobs_complex_and_simple_drone_all_basic_upkeep_mult$"
 
+ # planet_jobs_tec_free_agent - $pop_cat_tec_free_agent$
+ mod_base_planet_jobs_tec_free_agent: "$pop_cat_tec_free_agent$"
+
+ mod_planet_jobs_tec_free_agent_produces_mult: "$pop_cat_tec_free_agent$ Output"
+ mod_planet_jobs_tec_free_agent_upkeep_mult: "$pop_cat_tec_free_agent$ Upkeep"
+
+ mod_planet_jobs_tec_free_agent_minerals_produces_mult: "£minerals£ $minerals$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_food_produces_mult: "£food£ $food$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_energy_produces_mult: "£energy£ $energy$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_consumer_goods_produces_mult: "£consumer_goods£ $consumer_goods$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_alloys_produces_mult: "£alloys£ $alloys$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_physics_research_produces_mult: "£physics_research£ $physics_research$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_society_research_produces_mult: "£society_research£ $society_research$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_engineering_research_produces_mult: "£engineering_research£ $engineering_research$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_rare_crystals_produces_mult: "£rare_crystals£ $rare_crystals$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_volatile_motes_produces_mult: "£volatile_motes£ $volatile_motes$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_exotic_gases_produces_mult: "£exotic_gases£ $exotic_gases$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_unity_produces_mult: "£unity£ $unity$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_influence_produces_mult: "£influence£ $influence$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_sr_living_metal_produces_mult: "£sr_living_metal£ $sr_living_metal$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_sr_zro_produces_mult: "£sr_zro£ $sr_zro$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_sr_dark_matter_produces_mult: "£sr_dark_matter£ $sr_dark_matter$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_nanites_produces_mult: "£nanites£ $nanites$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_minor_artifacts_produces_mult: "£minor_artifacts£ $minor_artifacts$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_sr_tec_biomass_produces_mult: "£sr_tec_biomass£ $sr_tec_biomass$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_sr_tec_ai_power_produces_mult: "£sr_tec_ai_power£ $sr_tec_ai_power$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_local_produces_mult: "£sr_tec_machine_processing_local£ $sr_tec_machine_processing_local$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_empire_produces_mult: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_redirection_produces_mult: "£sr_tec_machine_processing_redirection£ $sr_tec_machine_processing_redirection$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_ai_unobtainium_produces_mult: "£ai_unobtainium£ $ai_unobtainium$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_pop_growth_produces_mult: "$tec_loc_pop_growth$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_biological_assembly_produces_mult: "$tec_loc_organic_assembly$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_assembly_produces_mult: "$tec_loc_assembly$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_all_research_produces_mult: "$tec_loc_research_resources$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_all_industrial_produces_mult: "$tec_loc_industrial_resources$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_all_basic_produces_mult: "$tec_loc_basic_resources$ from $pop_cat_tec_free_agent$"
+
+ mod_planet_jobs_tec_free_agent_minerals_produces_add: "$mod_planet_jobs_tec_free_agent_minerals_produces_mult$"
+ mod_planet_jobs_tec_free_agent_food_produces_add: "$mod_planet_jobs_tec_free_agent_food_produces_mult$"
+ mod_planet_jobs_tec_free_agent_energy_produces_add: "$mod_planet_jobs_tec_free_agent_energy_produces_mult$"
+ mod_planet_jobs_tec_free_agent_consumer_goods_produces_add: "$mod_planet_jobs_tec_free_agent_consumer_goods_produces_mult$"
+ mod_planet_jobs_tec_free_agent_alloys_produces_add: "$mod_planet_jobs_tec_free_agent_alloys_produces_mult$"
+ mod_planet_jobs_tec_free_agent_physics_research_produces_add: "$mod_planet_jobs_tec_free_agent_physics_research_produces_mult$"
+ mod_planet_jobs_tec_free_agent_society_research_produces_add: "$mod_planet_jobs_tec_free_agent_society_research_produces_mult$"
+ mod_planet_jobs_tec_free_agent_engineering_research_produces_add: "$mod_planet_jobs_tec_free_agent_engineering_research_produces_mult$"
+ mod_planet_jobs_tec_free_agent_rare_crystals_produces_add: "$mod_planet_jobs_tec_free_agent_rare_crystals_produces_mult$"
+ mod_planet_jobs_tec_free_agent_volatile_motes_produces_add: "$mod_planet_jobs_tec_free_agent_volatile_motes_produces_mult$"
+ mod_planet_jobs_tec_free_agent_exotic_gases_produces_add: "$mod_planet_jobs_tec_free_agent_exotic_gases_produces_mult$"
+ mod_planet_jobs_tec_free_agent_unity_produces_add: "$mod_planet_jobs_tec_free_agent_unity_produces_mult$"
+ mod_planet_jobs_tec_free_agent_influence_produces_add: "$mod_planet_jobs_tec_free_agent_influence_produces_mult$"
+ mod_planet_jobs_tec_free_agent_sr_living_metal_produces_add: "$mod_planet_jobs_tec_free_agent_sr_living_metal_produces_mult$"
+ mod_planet_jobs_tec_free_agent_sr_zro_produces_add: "$mod_planet_jobs_tec_free_agent_sr_zro_produces_mult$"
+ mod_planet_jobs_tec_free_agent_sr_dark_matter_produces_add: "$mod_planet_jobs_tec_free_agent_sr_dark_matter_produces_mult$"
+ mod_planet_jobs_tec_free_agent_nanites_produces_add: "$mod_planet_jobs_tec_free_agent_nanites_produces_mult$"
+ mod_planet_jobs_tec_free_agent_minor_artifacts_produces_add: "$mod_planet_jobs_tec_free_agent_minor_artifacts_produces_mult$"
+ mod_planet_jobs_tec_free_agent_sr_tec_biomass_produces_add: "$mod_planet_jobs_tec_free_agent_sr_tec_biomass_produces_mult$"
+ mod_planet_jobs_tec_free_agent_sr_tec_ai_power_produces_add: "$mod_planet_jobs_tec_free_agent_sr_tec_ai_power_produces_mult$"
+ mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_local_produces_add: "$mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_local_produces_mult$"
+ mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_empire_produces_add: "$mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_empire_produces_mult$"
+ mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_redirection_produces_add: "$mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_redirection_produces_mult$"
+ mod_planet_jobs_tec_free_agent_ai_unobtainium_produces_add: "$mod_planet_jobs_tec_free_agent_ai_unobtainium_produces_mult$"
+ mod_planet_jobs_tec_free_agent_amenities_produces_add: "$tec_loc_amenities$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_stability_produces_add: "$tec_loc_stability$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_trade_value_produces_add: "$tec_loc_trade_value$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_edict_funds_produces_add: "$tec_loc_edict_funds$ from $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_biological_assembly_produces_add: "$mod_planet_jobs_tec_free_agent_biological_assembly_produces_mult$"
+ mod_planet_jobs_tec_free_agent_assembly_produces_add: "$mod_planet_jobs_tec_free_agent_assembly_produces_mult$"
+ mod_planet_jobs_tec_free_agent_all_research_produces_add: "$mod_planet_jobs_tec_free_agent_all_research_produces_mult$"
+ mod_planet_jobs_tec_free_agent_all_industrial_produces_add: "$mod_planet_jobs_tec_free_agent_all_industrial_produces_mult$"
+ mod_planet_jobs_tec_free_agent_all_basic_produces_add: "$mod_planet_jobs_tec_free_agent_all_basic_produces_mult$"
+
+ mod_planet_jobs_tec_free_agent_minerals_upkeep_mult: "£minerals£ $minerals$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_food_upkeep_mult: "£food£ $food$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_energy_upkeep_mult: "£energy£ $energy$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_consumer_goods_upkeep_mult: "£consumer_goods£ $consumer_goods$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_alloys_upkeep_mult: "£alloys£ $alloys$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_physics_research_upkeep_mult: "£physics_research£ $physics_research$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_society_research_upkeep_mult: "£society_research£ $society_research$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_engineering_research_upkeep_mult: "£engineering_research£ $engineering_research$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_rare_crystals_upkeep_mult: "£rare_crystals£ $rare_crystals$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_volatile_motes_upkeep_mult: "£volatile_motes£ $volatile_motes$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_exotic_gases_upkeep_mult: "£exotic_gases£ $exotic_gases$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_unity_upkeep_mult: "£unity£ $unity$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_influence_upkeep_mult: "£influence£ $influence$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_sr_living_metal_upkeep_mult: "£sr_living_metal£ $sr_living_metal$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_sr_zro_upkeep_mult: "£sr_zro£ $sr_zro$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_sr_dark_matter_upkeep_mult: "£sr_dark_matter£ $sr_dark_matter$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_nanites_upkeep_mult: "£nanites£ $nanites$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_minor_artifacts_upkeep_mult: "£minor_artifacts£ $minor_artifacts$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_sr_tec_biomass_upkeep_mult: "£sr_tec_biomass£ $sr_tec_biomass$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_sr_tec_ai_power_upkeep_mult: "£sr_tec_ai_power£ $sr_tec_ai_power$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_local_upkeep_mult: "£sr_tec_machine_processing_local£ $sr_tec_machine_processing_local$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_empire_upkeep_mult: "£sr_tec_machine_processing_empire£ $sr_tec_machine_processing_empire$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_redirection_upkeep_mult: "£sr_tec_machine_processing_redirection£ $sr_tec_machine_processing_redirection$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_ai_unobtainium_upkeep_mult: "£ai_unobtainium£ $ai_unobtainium$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_all_research_upkeep_mult: "$tec_loc_research_resources$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_all_industrial_upkeep_mult: "$tec_loc_industrial_resources$ Upkeep of $pop_cat_tec_free_agent$"
+ mod_planet_jobs_tec_free_agent_all_basic_upkeep_mult: "$tec_loc_basic_resources$ Upkeep of $pop_cat_tec_free_agent$"
+
+ mod_planet_jobs_tec_free_agent_minerals_upkeep_add: "$mod_planet_jobs_tec_free_agent_minerals_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_food_upkeep_add: "$mod_planet_jobs_tec_free_agent_food_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_energy_upkeep_add: "$mod_planet_jobs_tec_free_agent_energy_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_consumer_goods_upkeep_add: "$mod_planet_jobs_tec_free_agent_consumer_goods_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_alloys_upkeep_add: "$mod_planet_jobs_tec_free_agent_alloys_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_physics_research_upkeep_add: "$mod_planet_jobs_tec_free_agent_physics_research_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_society_research_upkeep_add: "$mod_planet_jobs_tec_free_agent_society_research_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_engineering_research_upkeep_add: "$mod_planet_jobs_tec_free_agent_engineering_research_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_rare_crystals_upkeep_add: "$mod_planet_jobs_tec_free_agent_rare_crystals_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_volatile_motes_upkeep_add: "$mod_planet_jobs_tec_free_agent_volatile_motes_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_exotic_gases_upkeep_add: "$mod_planet_jobs_tec_free_agent_exotic_gases_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_unity_upkeep_add: "$mod_planet_jobs_tec_free_agent_unity_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_influence_upkeep_add: "$mod_planet_jobs_tec_free_agent_influence_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_sr_living_metal_upkeep_add: "$mod_planet_jobs_tec_free_agent_sr_living_metal_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_sr_zro_upkeep_add: "$mod_planet_jobs_tec_free_agent_sr_zro_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_sr_dark_matter_upkeep_add: "$mod_planet_jobs_tec_free_agent_sr_dark_matter_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_nanites_upkeep_add: "$mod_planet_jobs_tec_free_agent_nanites_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_minor_artifacts_upkeep_add: "$mod_planet_jobs_tec_free_agent_minor_artifacts_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_sr_tec_biomass_upkeep_add: "$mod_planet_jobs_tec_free_agent_sr_tec_biomass_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_sr_tec_ai_power_upkeep_add: "$mod_planet_jobs_tec_free_agent_sr_tec_ai_power_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_local_upkeep_add: "$mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_local_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_empire_upkeep_add: "$mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_empire_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_redirection_upkeep_add: "$mod_planet_jobs_tec_free_agent_sr_tec_machine_processing_redirection_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_ai_unobtainium_upkeep_add: "$mod_planet_jobs_tec_free_agent_ai_unobtainium_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_all_research_upkeep_add: "$mod_planet_jobs_tec_free_agent_all_research_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_all_industrial_upkeep_add: "$mod_planet_jobs_tec_free_agent_all_industrial_upkeep_mult$"
+ mod_planet_jobs_tec_free_agent_all_basic_upkeep_add: "$mod_planet_jobs_tec_free_agent_all_basic_upkeep_mult$"
+
  # planet_jobs_robotic - §BRobot§! Pop £job£ Jobs
  mod_base_planet_jobs_robotic: "§BRobot§! Pop £job£ Jobs"
 
