fixes + some ascension changes

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -107,7 +107,7 @@
  building_tec_nanite_difussor:0 "Nanite Difussor"
  building_tec_nanite_difussor_desc:0 "Those nanite dispersers are designed to affect habitation centers, for population use and improvement of day-to-day elements."
  building_tec_nanite_difussor_effect:0 "This £building£ "
-
+# /
 # ------------------------------------------------- SR uses - Living Metal
  building_tec_living_forge_1:0 "Sentient Forge"
  building_tec_living_forge_1_desc:0 "."
@@ -124,7 +124,7 @@
  building_tec_living_constructor:0 "Living Constructor"
  building_tec_living_constructor_desc:0 "."
  building_tec_living_constructor_effect:0 "This £building£ "
-
+# /
 # ------------------------------------------------- SR uses - Dark matter
  building_tec_contained_singularity_1:0 "Contained Singularity"
  building_tec_contained_singularity_1_desc:0 "By use of graviton and entropic energy, a micro singularity is created within this structure, providing a big way of study and extract exotic materials from it."
@@ -133,11 +133,54 @@
  building_tec_contained_singularity_2:0 "Isolated Singularity"
  building_tec_contained_singularity_2_desc:0 "By use of graviton and entropic energy, a singularity is created within this structure, providing a big way of study and extract exotic materials from it."
  building_tec_contained_singularity_2_effect:0 "This £building£ "
-
+# /
+# ------------------------------------------------- SR uses - Astral Threads
+ building_tec_astral_collider_1:0 "Rift Collider"
+ building_tec_astral_collider_1_desc:0 "This marvel of technology uses the knowledge about space-time anomalies to generate miniaturized astral rifts, allowing the observation and exploration of other dimensions in a contained and safe environment."
+ building_tec_astral_collider_1_effect:0 "This £building£ "
+# /
 # ------------------------------------------------- Other materials
- building_tec_mini_replicator:0 "Miniaturized Replicator"
+ building_tec_mini_replicator:0 "Micro-Replicator"
  building_tec_mini_replicator_desc:0 "A portable hi-tech structure that mimics a matter replicator processor at a low scale, which converts energy into tangible matter. The thermal byproduct of its activity must be constantly contained to avoid a complete melt-down of the surrounding area."
  building_tec_mini_replicator_effect:0 "This £building£ "
+
+# ------------------------------------------------- Marvels
+ building_tec_marvel_miniaturized_star:0 "Miniaturized Star"
+ building_tec_marvel_miniaturized_star_desc:0 "Contained in this extreme fail-proof and high-tech facility, an hyper-condensed star is suspended in a zero energy field, allowing mass energy extraction - The power of a star at our reach."
+ building_tec_marvel_miniaturized_star_effect:0 "This £building£ "
+
+ building_tec_marvel_paradox_extractor:0 "Paradox Extractor"
+ building_tec_marvel_paradox_extractor_desc:0 "A complex tower and underground installation focused on creating matter, using the power of paradoxical physics to create an artificial parallel dimension from which the materials will be drained and recycled."
+ building_tec_marvel_paradox_extractor_effect:0 "This £building£ "
+
+ building_tec_marvel_entropic_containment:0 "Entropic Containment"
+ building_tec_marvel_entropic_containment_desc:0 "These installations contain exotic matter with qualities not."
+ building_tec_marvel_entropic_containment_effect:0 "This £building£ "
+
+ building_tec_marvel_isolated_core:0 "Singularity Core"
+ building_tec_marvel_isolated_core_desc:0 "Self sufficient and protected labs where a hyper-sentient and highly sophisticated AI is contained, using its endless calculations on an isolated environment to generate immense non-influenced technological advancements."
+ building_tec_marvel_isolated_core_effect:0 "This £building£ "
+
+ building_tec_marvel_TODO:0 "TODO"
+ building_tec_marvel_TODO_desc:0 "TODO"
+ building_tec_marvel_TODO_effect:0 "This £building£ "
+
+ building_tec_marvel_TODO:0 "TODO"
+ building_tec_marvel_TODO_desc:0 "TODO"
+ building_tec_marvel_TODO_effect:0 "This £building£ "
+
+ building_tec_marvel_TODO:0 "TODO"
+ building_tec_marvel_TODO_desc:0 "TODO"
+ building_tec_marvel_TODO_effect:0 "This £building£ "
+
+ building_tec_marvel_TODO:0 "TODO"
+ building_tec_marvel_TODO_desc:0 "TODO"
+ building_tec_marvel_TODO_effect:0 "This £building£ "
+
+ building_tec_marvel_TODO:0 "TODO"
+ building_tec_marvel_TODO_desc:0 "TODO"
+ building_tec_marvel_TODO_effect:0 "This £building£ "
+# /
 
 # ------------------------------------------------- Synth t2 ascension
 
