rework: psionic planet ascension

--- a/localisation/english/zz_evolved_decisions_l_english.yml
+++ b/localisation/english/zz_evolved_decisions_l_english.yml
@@ -365,13 +365,13 @@ decision_tec_exocolonist_awake_secondary_effects:0 "Awake a secondary species po
 # Psionic ascension ascension
  decision_tec_psionic_ascension:0 "Ascension Ritual"
  decision_tec_psionic_ascension_desc:0 "With the help of some of our most qualified psionics, we will strengthen the psionic bonds between our reality and other dimensions, Ascending a part of our population to the §MShroud§!."
- decision_tec_psionic_ascension_effects:0 "Some of your pops will lose their physical form with a complicated psionic ritual in order to §YAscend§!, providing £sr_zro£ §YPotent Deposits§! in the process, boosting the remaining psionic population on the planet.\n\n§RAttempting this ritual with non psionic pops will have severe consequences.§!"
+ decision_tec_psionic_ascension_effects:0 "Will start the §Y$situation_tec_psionic_planet_ascension$§! Situation, in which some of your pops will lose their physical form periodically within a complicated psionic ritual in order to §MAscend§!\n\n§RAttempting this ritual with non psionic pops will have severe consequences.§!"
  decision_tec_require_psionic_species:0 "£trigger_no£ §RRequires at least a £mod_planet_psionic_jobs_produces_mult£ Psionic pop on the planet.§!"
  decision_tec_require_psionic_ascension_cd:0 "£trigger_no£ §RRequires a long period of time between ascension rituals, to avoid danger and potential issues.§!"
 
  decision_tec_psionic_ascension_cancel:0 "Cancel Ascension Ritual"
  decision_tec_psionic_ascension_cancel_desc:0 "Cancels the ascension ritual on this planet."
- decision_tec_psionic_ascension_cancel_effects:0 "The ascension ritual is cancelled, providing back the resources invested."
+ decision_tec_psionic_ascension_cancel_effects:0 "The ascension ritual is stopped."
 
 
 # Protoworlds
