--- a/localisation/english/zz_evolved_events_l_english.yml
+++ b/localisation/english/zz_evolved_events_l_english.yml
@@ -140,3 +140,13 @@
 
 
 
+situation_tec_psionic_planet_ascension:0 "$decision_tec_psionic_ascension$ on [target.GetName]"
+situation_tec_psionic_planet_ascension_type:0 "$situation_tec_psionic_planet_ascension$"
+situation_tec_psionic_planet_ascension_desc:0 "$decision_tec_psionic_ascension_desc$"
+situation_tec_psionic_planet_ascension_end_tooltip: "We will §MAscend§! §Y[target.tec_psionic_planet_ascension_pop_ascend] Pop(s)§! to the §MShroud§!.\n\nThis will create a §Y$d_tec_psionic_ascension_zone_1$§! on the planet, if it doesn't exist, which will produce §G0.25§! §Y$tec_loc_zro$§! and increase §Y$mod_planet_psionic_jobs_produces_mult$§! by §G2.5%§! per §Y$tec_loc_pop$§! ascended on this planet.\n\nThe bonuses might change depending on approach selected."
+situation_tec_psionic_planet_ascension_stage_1: "I"
+situation_approach_tec_psionic_planet_ascension_normal: "Ascend to the Shroud"
+situation_approach_tec_psionic_planet_ascension_normal_desc: "We will ascend pops indiscriminately to the Shroud"
+situation_approach_tec_psionic_planet_ascension_forced: "Accelerated Ascension"
+situation_approach_tec_psionic_planet_ascension_forced_desc: "Our ascension ritual will be hastened for our greater good, at a greater cost."
+situation_tec_psionic_planet_ascension_slow_progression: "We have not discovered all intricacies of the psionic ascension"
