more fixes + evolutionary architect change

--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -758,7 +758,8 @@ l_english:
 	job_tec_depth_drone:0 "Depth Drone"
 	job_tec_depth_drone_plural:0 "Depth Drones"
 	job_tec_depth_drone_desc:0 "These drones inhabit dark and depth regions near the seabed, patrolling and ensuring the stability and prosperity of underwater colonies."
-	job_tec_depth_drone_effect_desc: "['concept_tec_specialist_job_tec_depth_drone'] consume [tec_food_or_equivalent_upkeep] and generates a small amount of [job_tec_depth_drone_growth], increases $tec_loc_menial_output$ and reduces £crime£ §YDeviancy§! "
+	job_tec_depth_drone_effect_desc: "['concept_tec_specialist_job_tec_depth_drone'] consume [tec_food_or_equivalent_upkeep] to produce §Y$tec_loc_unity$§!, increases $tec_loc_menial_output$ and reduces £crime£ §YDeviancy§! "
+	# generate a small amount of [job_tec_depth_drone_growth]
 	mod_job_tec_depth_drone_add:0 "$job_tec_depth_drone$ Jobs"
 	mod_job_tec_depth_drone_per_pop:0 "§G+1§! $job_tec_depth_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_depth_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_depth_drone_add£ per $VALUE$ £pop£"
