feat: psionic planet ascension situation extended

--- a/localisation/english/zz_evolved_events_l_english.yml
+++ b/localisation/english/zz_evolved_events_l_english.yml
@@ -149,4 +149,8 @@ situation_approach_tec_psionic_planet_ascension_normal: "Ascend to the Shroud"
 situation_approach_tec_psionic_planet_ascension_normal_desc: "We will ascend pops indiscriminately to the Shroud"
 situation_approach_tec_psionic_planet_ascension_forced: "Accelerated Ascension"
 situation_approach_tec_psionic_planet_ascension_forced_desc: "Our ascension ritual will be hastened for our greater good, at a greater cost."
+situation_approach_tec_psionic_planet_ascension_slaves: "Serving their Betters"
+situation_approach_tec_psionic_planet_ascension_slaves_desc: "We will prioritize §Y£pop_cat_slave£ $pop_cat_slave_plural$§! for the ritual, as they will serve to empower their betters. If none are available, other pops will take their place."
+situation_approach_tec_psionic_planet_ascension_xenos: "Tribute of the Xenos"
+situation_approach_tec_psionic_planet_ascension_xenos_desc: "We will prioritize §Y£sr_alien_pets£ Xenos§! for the ritual, as they will serve to empower us, tribute for suffering their ilk. If none are available, other pops will take their place."
 situation_tec_psionic_planet_ascension_slow_progression: "We have not discovered all intricacies of the psionic ascension"
