--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -2363,7 +2363,7 @@
  # Evolved
 	civic_tec_hive_frenzy: "§R§!Reproductive Frenzy"
 	civic_tec_hive_frenzy_desc:0 "['concept_tec_basic_civic']\n\nThis Hive Mind is clearly determined to favor the reproduction of its drones, even if it implies a stricter control of its generally combative and ever-demanding population.\n"
-	civic_tec_hive_frenzy_tooltip:0 "- The hive empire gain additional §GPop grow§! but has more £crime£ §Rdeviancy§! and §Rincreased colonizer cost§!\n\n"
+	civic_tec_hive_frenzy_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£pop£ Spawning Frenzy§!\n- Each §Y$tec_loc_capital_tier$§! increases §Y$tec_loc_organic_assembly$§! and §Y£job_spawning_drone£ Organic Assembler Upkeep§! by §G5%§!.\n\n$tec_loc_c_initial_pick$ §H£society£ Brood Mentality§!\n- Provides the §Y£society£ $tech_tec_spawning_pools_2$§! Technology as guaranteed."
 
 	civic_tec_hive_eyesinthesky:0 "§R§!Eyes in the Sky"
 	civic_tec_hive_eyesinthesky_desc:0 "['concept_tec_basic_civic']\n\nConcerned by its own security, this Hive Mind has a strong focus on the defense and maintenance of proper lines of containment for external invaders or threats, so it greatly focus on a cohesion of territory and naval assets."
@@ -2659,6 +2659,7 @@
  # Vanilla
 	civic_machine_replication:0 "§R§!Rapid Replicator"
 	civic_machine_replication_desc:0 "['concept_tec_basic_civic']\n\nThe Units that constitute the Machine Intelligence were originally designed for rapid proliferation. The Machine Intelligence retains many of these early production pipeline optimizations."
+	civic_machine_replication_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£pop£ Intensified Replication§!\n- Each §Y$tec_loc_capital_tier$§! increases §Y$tec_loc_assembly$§! and §Y£job_replicator£ Robotic Assembler Upkeep§! by §G5%§!.\n\n$tec_loc_c_initial_pick$ §H£engineering£ Replication Templates§!\n- Provides the §Y£engineering£ $tech_mega_assembly$§! Technology as guaranteed."
 
 	civic_machine_built_to_last:0 "§R§!Built to Last"
 	civic_machine_built_to_last_desc:0 "['concept_tec_basic_civic']\n\nBuilt to an exceptional standard, individual units of this Machine Empire require only a minimum of operational maintenance and excel on resilience and long-term design."
