--- a/localisation/english/zz_evolved_tech_l_english.yml
+++ b/localisation/english/zz_evolved_tech_l_english.yml
@@ -121,7 +121,14 @@
 
 	tech_tec_cloning_3:0 "Automated Cloning"
 	tech_tec_cloning_3_desc:0 "Via automatic somatic replication, any living tissue or individual can be replicated in advanced gene vats, being a tremendously helpful breakthrough for our empire."
+ # /
+ # --------------- Spawning pools
+	tech_tec_spawning_pools_2:0 "Brood Reservoir"
+	tech_tec_spawning_pools_2_desc:0 "Samples of satisfactory genetic strands will be applied to our spawning pools to increase the productivity and health of the new drones in our collective."
 
+	tech_tec_spawning_pools_3:0 "Progeny Overproduction"
+	tech_tec_spawning_pools_3_desc:0 "Stimulated growth of new progeny will ensure the future of our collective."
+ # /
  # --------------- Cytogenesis
 	tech_tec_gene_1:0 "Advanced Cytogenesis"
 	tech_tec_gene_1_desc:0 "Genetic preservation and pseudo-natural individual reproduction allows a more natural but boosted process of growth."
